--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 # Project exclude paths
 /cmake-build-debug/
 /cmake-build-release/
+/zmqpp/
+/libzmq/
+/libsodium-stable/
+/libsodium-1.0.18-stable.tar.gz
+/libsodium-1.0.18-stable.tar.gz.1
